image path updated and resume updated

--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
                         <div class="cc">
                             <div>
                                 <a href="https://www.codechef.com/users/laddumatyal" target="_blank">
-                                    <img src="/assets/img/cc.png" class="c-icon" alt="">
+                                    <img src="assets/img/cc.png" class="c-icon" alt="">
                                 </a>
                             </div>
                             <div>
                                 <a href="https://leetcode.com/laddu_matiyal/" target="_blank">
-                                    <img src="/assets/img/lc.png" class="c-icon" alt="">
+                                    <img src="assets/img/lc.png" class="c-icon" alt="">
                                 </a>
                             </div>
                         </div>
@@ -406,7 +406,7 @@
                                 </p>
                                 <a href="https://github.com/matYal-Ji/Drowsiness-Detector/blob/master/main.ipynb" class="button button--flex button--small portfolio__button">
                                     NoteBook
-                                    <i class="uil uil-arrow-right button__icon"></i>
+                                    <i class="uil uil-arrow-up-right button__icon"></i>
                                 </a>
                             </div>                
                         </div>
