--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/solid.css">
         <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
         <link rel="stylesheet" href="assets/css/styles.css">
-        <title>Responsive Portfolio Website</title>
+        <title>uttkarsh</title>
     </head>
     <body>
         <header class="header" id="header">
@@ -447,7 +447,7 @@
                             <i class="uil uil-phone contact__icon"></i>
                             <div>
                                 <h3 class="contact__title">Call Me</h3>
-                                <span class="contact__subtitle">999-777-5555</span>
+                                <span class="contact__subtitle">+91 8077787166</span>
                             </div>
                         </div>
                         <div class="contact__information">
@@ -496,11 +496,11 @@
             <div class="footer__bg">
                 <div class="footer__container container grid">
                     <div>
-                        <h1 class="footer__title">laddu</h1>
-                        <span class="footer__subtitle">Frontend developer</span>
+                        <h1 class="footer__title">Uttkarsh</h1>
+                        <span class="footer__subtitle">Machine Learning Enthusiast</span>
                     </div>
                     <ul class="footer__links">
-                        <li><a href="#services" class="footer__link">Services</a></li>
+                        <li><a href="#" class="footer__link">Home</a></li>
                         <li><a href="#portfolio" class="footer__link">Portfolio</a></li>
                         <li><a href="#contact" class="footer__link">Contactme</a></li>
                     </ul>
