--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                             <i class="uil uil-phone contact__icon"></i>
                             <div>
                                 <h3 class="contact__title">Call Me</h3>
-                                <span class="contact__subtitle">+91 8077787166</span>
+                                <span class="contact__subtitle">+91 807778****</span>
                             </div>
                         </div>
                         <div class="contact__information">
