--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <div class="about__data">
                         <p class="about__description">
                             B.Tech. pre-final year student in Computer Science and Engineering at <strong>USICT, GGSIPU</strong>, 
-                            secured 8.5 CGPA till now. <br><br>3<i class="uis uis-star home__social-icon"></i> coder & 1600+ rated 
+                            secured 8.5 CGPA till now. <br><br>3<i class="uis uis-star home__social-icon"></i> coder & 1684 rated 
                             on CodeChef and solved over 200 problem on LeetCode & CodeChef.
                         </p>
                         <div class="cc">
